event-driven-order-processing-system-main/k8s/canary/api-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minishop-api-canary
  labels:
    app: minishop-api
    app.kubernetes.io/name: minishop-api
    app.kubernetes.io/component: api
    release-track: canary
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: minishop-api
      release-track: canary
  template:
    metadata:
      labels:
        app: minishop-api
        app.kubernetes.io/name: minishop-api
        app.kubernetes.io/component: api
        app.kubernetes.io/version: v2
        release-track: canary
    spec:
      containers:
        - name: api
          image: minishop-api:canary
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 20
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: minishop-api-canary
  labels:
    app: minishop-api
    app.kubernetes.io/name: minishop-api
    app.kubernetes.io/component: api
    release-track: canary
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/metrics"
    prometheus.io/port: "3000"
spec:
  selector:
    app: minishop-api
    release-track: canary
  ports:
    - name: http
      port: 3000
      targetPort: http
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minishop-api-canary
  labels:
    app: minishop-api
    app.kubernetes.io/name: minishop-api
    app.kubernetes.io/component: api
    release-track: canary
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "5"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "30"
spec:
  ingressClassName: nginx
  rules:
    - host: minishop.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minishop-api-canary
                port:
                  name: http
